--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <springframework.version>4.3.0.RELEASE</springframework.version>
-    <war.name>HelloSpringUber</war.name>
+    <war.name>Uber</war.name>
   </properties>
 
   <dependencies>
@@ -79,7 +79,7 @@
         </plugin>
       </plugins>
     </pluginManagement>
-    <finalName>${war.name}</finalName>
+    <!--<finalName> ${war.name}</finalName>-->
   </build>
 
 </project>
